--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -24,13 +24,18 @@ serde-wasm-bindgen = "0.5.0"
 serde_json = "1.0.104"
 serde = "1.0.181"
 strum_macros = "0.25.1"
-rooting = { version = "0.1.5", path = "../../rooting" }
 lunk = { version = "0.1.2", path = "../../linkos" }
 gloo = { version = "0.10.0", features = ["futures"] }
 wasm-bindgen-futures = "0.4.37"
 urlencoding = "2.1.3"
 console_error_panic_hook = "0.1.7"
 defer = "0.1.0"
+rooting = "0.1.6"
+rooting-forms = "0.0.1"
 
 [profile.release]
 debug = true
+
+[patch.crates-io]
+rooting = { path = "../../rooting" }
+rooting-forms = { path = "../../rooting-form" }
