--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.26"
+chrono = { version = "0.4.26", features = ["serde"] }
 js-sys = "0.3.64"
 reqwasm = "0.5.0"
 wasm-bindgen = "0.2.87"
@@ -19,6 +19,8 @@ web-sys = { version = "0.3.64", features = [
     "HtmlTextAreaElement",
     "CssStyleDeclaration",
     "HtmlElement",
+    "KeyboardEvent",
+    "History",
 ] }
 serde-wasm-bindgen = "0.5.0"
 serde_json = "1.0.104"
@@ -32,6 +34,8 @@ console_error_panic_hook = "0.1.7"
 defer = "0.1.0"
 rooting = "0.1.6"
 rooting-forms = "0.0.1"
+caches = "0.2.7"
+futures = "0.3.29"
 
 [profile.release]
 debug = true
