--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -21,6 +21,14 @@ web-sys = { version = "0.3.64", features = [
     "HtmlElement",
     "KeyboardEvent",
     "History",
+    "ServiceWorker",
+    "ServiceWorkerGlobalScope",
+    "ServiceWorkerRegistration",
+    "BroadcastChannel",
+    "MessageEvent",
+    "PushEvent",
+    "PushMessageData",
+    "NotificationOptions",
 ] }
 serde-wasm-bindgen = "0.5.0"
 serde_json = "1.0.104"
