Db, serviceworkers done but untested

--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -22,8 +22,10 @@ web-sys = { version = "0.3.64", features = [
     "KeyboardEvent",
     "History",
     "ServiceWorker",
+    "ServiceWorkerContainer",
     "ServiceWorkerGlobalScope",
     "ServiceWorkerRegistration",
+    "Clients",
     "BroadcastChannel",
     "MessageEvent",
     "PushEvent",
