--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -26,8 +26,13 @@ web-sys = { version = "0.3.64", features = [
     "ServiceWorkerGlobalScope",
     "ServiceWorkerRegistration",
     "Clients",
+    "ExtendableMessageEvent",
     "BroadcastChannel",
-    "MessageEvent",
+    "PushManager",
+    "PushSubscription",
+    "PushSubscriptionOptionsInit",
+    "PushSubscriptionJson",
+    "PushEncryptionKeyName",
     "PushEvent",
     "PushMessageData",
     "NotificationOptions",
@@ -47,6 +52,8 @@ rooting-forms = "0.0.1"
 caches = "0.2.7"
 futures = "0.3.29"
 indexed_db_futures = "0.4.1"
+zbase32 = "0.1.2"
+bincode = "1.3.3"
 
 [profile.release]
 debug = true
